--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
     <link rel="stylesheet" href="cascadeF.css">
 </head>
 <body>
-    <p class="fondo">
+    <div class="fondo">
         pagina<br>
         pagina
-    </p>
-    <p class="PART">
+    </div>
+    <div class="PART">
         letras<br> mas letras y weas
-    </p>
-
+    </div>
 </body>
 </html>
